Cart component overflow fix

--- a/src/cart/cart.css
+++ b/src/cart/cart.css
@@ -12,7 +12,7 @@ body {
   width: 100%;
   height: 94.9vh;
   display: block;
-  overflow: hidden;
+  overflow-x: hidden;
   background-image: linear-gradient(150deg, #ffffff 0%, #aed4d6 81%);
 }
 
